--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://example.com"
+baseURL: "https://blog.lc6chang.com"
 
 defaultContentLanguage: "en"
 
@@ -31,6 +31,21 @@ languages:
           url: "/tags/"
           title: ""
           weight: 2
+  zh-cn:
+    weight: 2
+    languageCode: "zh-CN"
+    languageName: "简体中文"
+    hasCJKLanguage: true
+    paginate: 12
+    menu:
+      main:
+        - identifier: "posts"
+          pre: ""
+          post: ""
+          name: "所有文章"
+          url: "/posts/"
+          title: ""
+          weight: 1
 
 params:
   version: "0.2.X"
