--- a/config.yaml
+++ b/config.yaml
@@ -66,10 +66,10 @@ languages:
       description: "This is lc6chang's blog"
       keywords: ["lc6chang", "blog", "technology", "software"]
       social:
-        GitHub: "https://github.com/lc6chang"
-        Linkedin: "https://www.linkedin.com/in/chang-liu-1a607b17a/"
+        GitHub: "lc6chang"
+        Linkedin: "chang-liu-1a607b17a"
         Email: "lc6chang@gmail.com"
-        Stackoverflow: "https://stackoverflow.com/users/10839541/liuchang"
+        Stackoverflow: "10839541"
       home:
         profile:
           enable: true
@@ -135,10 +135,10 @@ languages:
       description: "lc6chang的个人博客"
       keywords: ["lc6chang", "blog", "博客", "计算机技术", "软件"]
       social:
-        GitHub: "https://github.com/lc6chang"
-        Linkedin: "https://www.linkedin.com/in/chang-liu-1a607b17a/"
+        GitHub: "lc6chang"
+        Linkedin: "chang-liu-1a607b17a"
         Email: "lc6chang@gmail.com"
-        Stackoverflow: "https://stackoverflow.com/users/10839541/liuchang"
+        Stackoverflow: "10839541"
       home:
         profile:
           enable: true
